{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 69,
  "lineage": "212d29dc-b654-d3b1-db29-e6b4ca58f377",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:396913737059:internet-gateway/igw-0a19606b78a347721",
            "id": "igw-0a19606b78a347721",
            "owner_id": "396913737059",
            "region": "af-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "cvm-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cvm-dev-igw"
            },
            "vpc_id": "vpc-06d024d4c88d7431f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "igw-0a19606b78a347721",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a19606b78a347721",
            "id": "r-rtb-0b63a1d0d3da699a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "af-south-1",
            "route_table_id": "rtb-0b63a1d0d3da699a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "af-south-1",
            "route_table_id": "rtb-0b63a1d0d3da699a6"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:396913737059:route-table/rtb-035dd1c001d0beeeb",
            "id": "rtb-035dd1c001d0beeeb",
            "owner_id": "396913737059",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "cvm-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cvm-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d024d4c88d7431f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "rtb-035dd1c001d0beeeb",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:396913737059:route-table/rtb-0b63a1d0d3da699a6",
            "id": "rtb-0b63a1d0d3da699a6",
            "owner_id": "396913737059",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a19606b78a347721",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "cvm-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cvm-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d024d4c88d7431f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "rtb-0b63a1d0d3da699a6",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0460585bb63cb60f6",
            "region": "af-south-1",
            "route_table_id": "rtb-035dd1c001d0beeeb",
            "subnet_id": "subnet-0d2333f695d6f688f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "rtbassoc-0460585bb63cb60f6",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b13196f2ae7fcf5d",
            "region": "af-south-1",
            "route_table_id": "rtb-035dd1c001d0beeeb",
            "subnet_id": "subnet-0a592ce9b8f45b0d9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "rtbassoc-0b13196f2ae7fcf5d",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0491c7e39c3d501ed",
            "region": "af-south-1",
            "route_table_id": "rtb-0b63a1d0d3da699a6",
            "subnet_id": "subnet-0b294dbc0092df072"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "rtbassoc-0491c7e39c3d501ed",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085e9a06166a46bd8",
            "region": "af-south-1",
            "route_table_id": "rtb-0b63a1d0d3da699a6",
            "subnet_id": "subnet-02d3be19ecc81e3da"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "rtbassoc-085e9a06166a46bd8",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:396913737059:subnet/subnet-0d2333f695d6f688f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2333f695d6f688f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913737059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "cvm-dev-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cvm-dev-private-subnet-1",
              "Type": "private"
            },
            "vpc_id": "vpc-06d024d4c88d7431f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "subnet-0d2333f695d6f688f",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:396913737059:subnet/subnet-0a592ce9b8f45b0d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a592ce9b8f45b0d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913737059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "cvm-dev-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cvm-dev-private-subnet-2",
              "Type": "private"
            },
            "vpc_id": "vpc-06d024d4c88d7431f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "subnet-0a592ce9b8f45b0d9",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:396913737059:subnet/subnet-0b294dbc0092df072",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b294dbc0092df072",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913737059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "cvm-dev-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cvm-dev-public-subnet-1",
              "Type": "public"
            },
            "vpc_id": "vpc-06d024d4c88d7431f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "subnet-0b294dbc0092df072",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:396913737059:subnet/subnet-02d3be19ecc81e3da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d3be19ecc81e3da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913737059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "cvm-dev-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cvm-dev-public-subnet-2",
              "Type": "public"
            },
            "vpc_id": "vpc-06d024d4c88d7431f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "subnet-02d3be19ecc81e3da",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:396913737059:vpc/vpc-06d024d4c88d7431f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047dde726d2861b84",
            "default_route_table_id": "rtb-0713bc53ee65a4d31",
            "default_security_group_id": "sg-0940afe0ff3c81b96",
            "dhcp_options_id": "dopt-0967ca4c2191b59d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d024d4c88d7431f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0713bc53ee65a4d31",
            "owner_id": "396913737059",
            "region": "af-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "cvm-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cvm-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913737059",
            "id": "vpc-06d024d4c88d7431f",
            "region": "af-south-1"
          }
        }
      ]
    }
  ]
}